# qrtool

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .goreleaser.yaml  404.html  AUTHORS.adoc  BUILD.adoc  CHANGELOG.adoc  CODE_OF_CONDUCT.adoc  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  COPYING  COPYRIGHT  Cargo.toml  Cross.toml  LICENSE-MIT  README.md  antora-playbook.yml  book.json  build.rs  clippy.toml  justfile  package-lock.json  package.json  rustfmt.toml  search-index.js  sitemap.xml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: CD.yaml  CI.yaml  REUSE.yaml  actionlint.yaml  dependabot_auto_merge.yaml  deploy.yaml  just.yaml  mirror.yaml  shell_script.yaml  tombi.yaml
LICENSES/: MIT.txt
asset/: demo.gif.license
assets/: README.adoc  demo.gif.license  demo.yaml  generate.bash
book/: authors.html  build.html  changelog.html  contributing.html  index.html  install.html  license.html  repository.html  usage.html
book/man/man1/: qrtool-decode.1.html  qrtool-encode.1.html  qrtool-help.1.html  qrtool.1.html
doc/book/: AUTHORS.adoc  BUILD.adoc  CHANGELOG.adoc  CONTRIBUTING.adoc  INSTALL.adoc  INSTALL.md  LICENSE.adoc  LICENSES  README.adoc  README.md  SUMMARY.adoc  SUMMARY.md  antora.yml
doc/book/man/man1/: include  qrtool-decode.1.adoc  qrtool-encode.1.adoc  qrtool-help.1.adoc  qrtool.1.adoc
doc/book/modules/ROOT/: nav.adoc
doc/book/modules/ROOT/pages/: authors.adoc  index.adoc  install.adoc  license.adoc
doc/man/include/: section-copyright.adoc  section-exit-status.adoc  section-reporting-bugs.adoc
doc/man/man1/: qrtool-decode.1.adoc  qrtool-encode.1.adoc  qrtool-help.1.adoc  qrtool.1.adoc
docs/book/modules/ROOT/: nav.adoc
docs/book/modules/ROOT/examples/: LICENSES
docs/book/modules/ROOT/pages/: build.adoc  changelog.adoc  contributing.adoc  index.adoc  install.adoc  license.adoc  man  repository.adoc  usage.adoc
docs/book/modules/ROOT/pages/man/: man1
docs/book/modules/ROOT/pages/man/man1/: qrtool-completion.1.adoc  qrtool-decode.1.adoc  qrtool-encode.1.adoc  qrtool-help.1.adoc  qrtool.1.adoc
docs/book/modules/ROOT/partials/man/man1/: include
docs/book/supplemental-ui/partials/: footer-content.hbs  header-content.hbs
docs/man/include/: section-reporting-bugs.adoc
docs/man/man1/: qrtool-completion.1.adoc  qrtool-decode.1.adoc  qrtool-encode.1.adoc  qrtool-help.1.adoc  qrtool.1.adoc
docs/man/man1/include/: section-copyright.adoc  section-exit-status.adoc
src/: app.rs  cli.rs  color.rs  core.rs  decode.rs  encode.rs  input.rs  main.rs  metadata.rs  util.rs
src/assets/: after-long-help.md  long-version.md
tests/: completion.rs  decode.rs  encode.rs  integration.rs
tests/assets/: completion-after-long-help.md  decode-after-long-help.md  encode-after-long-help.md  long-version.md  long-version.md.license
tests/data/: basic.svgz
tests/data/colored/: bg.png.license  rgb.eps  rgb_ansi.txt  rgb_ansi_256.txt  rgb_ansi_true_color.txt  rgb_ansi_vga.txt  rgb_ansi_windows_10_console.txt  rgba.png.license
tests/data/decode/: ascii.pbm  ascii.pgm  ascii.ppm  binary.pbm  binary.pgm  binary.ppm  bmp.cur  decode.dds  decode.exr  decode.ff  decode.hdr  decode.jpeg.license  decode.qoi  decode.svgz  decode.tga  decode.tga.license  decode.tiff  decode.txt  decode.xbm  png.cur
tests/data/encode/: ansi.txt  ansi_256.txt  ansi_true_color.txt  ascii.txt  ascii_invert.txt  data.txt  encode.eps  encode.pic  encode.txt  unicode_invert.txt
tests/data/margin/: 8.eps  8.pic  8.png.license  8.txt  8_ansi.txt  8_ansi_256.txt  8_ansi_true_color.txt  8_ascii.txt  8_ascii_invert.txt  8_unicode_invert.txt
tests/data/mode/: alphanumeric_max.txt  alphanumeric_over_max.txt  byte.txt  byte_max.txt  byte_over_max.txt  kanji.txt  kanji_max.txt  kanji_over_max.txt  numeric_max.txt  numeric_over_max.txt
tests/data/module_size/: 1.txt  3.eps  3.pic  3_ansi.txt  3_ansi.txt.license  3_ansi_256.txt  3_ansi_true_color.txt  3_ascii.txt  3_ascii_invert.txt  3_ascii_invert.txt.license  3_unicode.txt  3_unicode_invert.txt
tests/data/variant/: rmqr.png.license
tests/utils/: command.rs  mod.rs
