# SPDX-FileCopyrightText: 2022 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "qrtool"
version = "0.11.8"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2024"
rust-version = "1.85.0"
description = "An utility for encoding or decoding QR code"
readme = "README.md"
homepage = "https://sorairolake.github.io/qrtool/"
repository = "https://github.com/sorairolake/qrtool"
license = "Apache-2.0 OR MIT"
keywords = ["qrcode"]
categories = ["command-line-utilities"]
include = ["/LICENSES", "/README.md", "/src"]

[dependencies]
anstyle = { version = "1.0.10", default-features = false, optional = true }
anstyle-lossy = { version = "1.1.3", optional = true }
anstyle-yansi = { version = "2.0.2", optional = true }
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive", "wrap_help"] }
clap_complete = "4.5.47"
clap_complete_nushell = "4.5.5"
csscolorparser = "0.7.0"
image = { version = "0.25.6", default-features = false, features = ["png", "rayon"] }
is-svg = { version = "0.2.0", optional = true }
oxipng = { version = "9.1.4", default-features = false, features = ["parallel", "zopfli"], optional = true }
qrcode = "0.14.1"
resvg = { version = "0.45.0", default-features = false, optional = true }
rqrr = "0.9.3"
sysexits = "0.9.0"
xbm = { version = "0.2.0", optional = true }
yansi = { version = "1.0.1", default-features = false, optional = true }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"

[features]
default = [
  "decode-from-bmp",
  "decode-from-dds",
  "decode-from-exr",
  "decode-from-ff",
  "decode-from-gif",
  "decode-from-hdr",
  "decode-from-ico",
  "decode-from-jpeg",
  "decode-from-pnm",
  "decode-from-qoi",
  "decode-from-svg",
  "decode-from-tga",
  "decode-from-tiff",
  "decode-from-webp",
  "decode-from-xbm",
  "optimize-output-png",
  "output-as-ansi",
]
decode-from-bmp = ["image/bmp"]
decode-from-dds = ["image/dds"]
decode-from-exr = ["image/exr"]
decode-from-ff = ["image/ff"]
decode-from-gif = ["image/gif"]
decode-from-hdr = ["image/hdr"]
decode-from-ico = ["image/ico"]
decode-from-jpeg = ["image/jpeg"]
decode-from-pnm = ["image/pnm"]
decode-from-qoi = ["image/qoi"]
decode-from-svg = ["dep:is-svg", "dep:resvg"]
decode-from-tga = ["image/tga"]
decode-from-tiff = ["image/tiff"]
decode-from-webp = ["image/webp"]
decode-from-xbm = ["dep:xbm"]
optimize-output-png = ["dep:oxipng"]
output-as-ansi = [
  "dep:anstyle",
  "dep:anstyle-lossy",
  "dep:anstyle-yansi",
  "dep:yansi",
]

[lints.clippy]
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
